--- a/index.css
+++ b/index.css
@@ -59,7 +59,8 @@ header {
 
 
 .presentation{
-    overflow: hidden;
+    /* overflow: hidden; */
+    height: fit-content;
 }
 
 
@@ -67,7 +68,7 @@ header {
 .slideshow-container {
     top:10px;
     width: 100%;
-    height: 480px;
+    height: fit-content;
     position: relative;
     margin: auto;
 }
@@ -270,6 +271,7 @@ iframe{
 
     header{
         padding: 10px 5px 10px 5px ;
+        height: fit-content;
     }
     .abrir-menu,
     .cerrar-menu {
@@ -327,5 +329,96 @@ iframe{
         display: block;
         width: 90px;
     }
+
+    .prev, .next {
+        top: 50%;
+    }
+
+    .wellCont{
+        flex-direction: column;
+        height: 300px;
+    }
+    
+    .wellcome{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2,1fr);
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .weLogo{
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+
+    .wellTitle{
+        grid-row:2/3 ;
+        grid-column: 1/2;
+        font-size: 10px;
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .wellTitle>h1{
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .wellImg{
+        grid-row:3/4 ;
+        grid-column: 1/2;
+
+    }
+
+    .services{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3,1fr);
+        gap: 15px;
+    }
+
+    .localesDis{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    .Oficinas{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    .SHB{
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    .foundUsTitle{
+        font-size: 13px;
+    }
+
+    .foundUs{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row: 1fr 1fr;
+        padding: 0 5px 0 5px;
+    }
+
+    iframe{
+        width: 340px;
+        height: 340px;
+    }
+
+    .directions>div>img{
+        width: 20px;
+        height: 20px;
+    }
+    .directions>div>p{
+        margin: 0 0 0 10px ;
+    }
+    
+    
 
 }
