--- a/PROTO/proto.css
+++ b/PROTO/proto.css
@@ -1,16 +1,7 @@
-:root{
-    --textColor: #fff;
-    --principalGreen: #007335;
-    font-family: 'Ysabeau Infant', sans-serif;
-
-}
-
-* {box-sizing:border-box}
-
 body{
     background-color: #fff;
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23011604' fill-opacity='1' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
-    /* padding: 0 20px 0 20px; */
+    padding: 0;
     margin: 0;
 }
 
@@ -57,12 +48,9 @@ header {
     display: none;
 }
 
-
 .presentation{
     /* overflow: hidden; */
     height: fit-content;
-    padding: 20px;
-    /* height: 500px; */
 }
 
 
@@ -129,6 +117,71 @@ header {
     to {opacity: 1}
 }
 
+
+
+
+
+
+
+.formContainer{
+    background-image: url(../MEDIA/real-estate-.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    grid-template-columns: repeat(2,1fr);
+    position: absolute;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    /* align-items: center; */
+    /* text-align: center; */
+    grid-gap: 25px;
+    width: 100%;
+}
+    
+
+
+
+
+
+
+
+.formContleftCont{
+    grid-column: 1/2;
+    display: grid;
+    grid-template-rows: fit-content  repeat(4,1fr);
+    grid-template-columns: 1fr;
+    width: 100%;
+    justify-items: end;
+}   
+
+.formContleftCont>div{
+    width: 300px;
+    justify-content: start;
+    height: fit-content;
+}
+
+.lstContTitleCont title{
+    grid-row: 1/2 ;
+}
+
+.fromContLefTitle{
+    width: 300px;
+    justify-content: start;
+    height: fit-content;
+    font-size: 60px;
+}
+
+.rightCont{
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(7,1fr) ;
+    
+    
+}
+
+
 .wellCont{
     display: flex;
     align-items: center;
@@ -187,50 +240,6 @@ header {
     width: 200px;
 }
 
-.services{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-items: center;
-}
-
-.services>div>a>button{
-    height: 50px;
-    width: 150px;
-    background-color: #007335;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-}
-
-.SHB{
-    grid-column: 3/4;
-}
-.foundUsTitleCont{
-    display: grid;
-    justify-items: center;
-}
-.foundUsTitle{
-    margin: 10px 0 10px 0;
-    display: grid;
-    justify-items: center;
-}
-.foundUs{
-    margin: 20px 0 20px 0;
-    display: flex;
-    justify-items: center;
-    gap: 50px;
-    width: 100%;
-}
-
-.foundUs>div{
-    display: grid;
-    justify-items: center;
-    width: 100%;
-}
-iframe{
-    width: 600px;
-    height: 400px;
-}
 
 .directions{
     background-color: #007335;
@@ -262,12 +271,6 @@ iframe{
     color: #fff;
     
 }
-.botFooterRights>p>a{
-    text-decoration: none;
-    color: #fff;
-    
-}
-
 .botFooterRights>p>a{
     text-decoration: none;
     color: #fff;
@@ -347,84 +350,6 @@ iframe{
     .prev, .next {
         top: 50%;
     }
-
-    .wellCont{
-        flex-direction: column;
-        height: 300px;
-    }
-    
-    .wellcome{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2,1fr);
-        justify-content: center;
-        justify-items: center;
-    }
-
-    .weLogo{
-        grid-row: 1/2;
-        grid-column: 1/2;
-    }
-
-    .wellTitle{
-        grid-row:2/3 ;
-        grid-column: 1/2;
-        font-size: 10px;
-        display: flex;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-    }
-
-    .wellTitle>h1{
-        display: flex;
-        align-content: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .wellImg{
-        grid-row:3/4 ;
-        grid-column: 1/2;
-
-    }
-
-    .services{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3,1fr);
-        gap: 15px;
-    }
-
-    .localesDis{
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-
-    .Oficinas{
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
-    .SHB{
-        grid-column: 1/2;
-        grid-row: 3/4;
-    }
-
-    .foundUsTitle{
-        font-size: 13px;
-    }
-
-    .foundUs{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-row: 1fr 1fr;
-        padding: 0 5px 0 5px;
-    }
-
-    iframe{
-        width: 340px;
-        height: 340px;
-    }
-
     .directions>div>img{
         width: 20px;
         height: 20px;
@@ -433,6 +358,6 @@ iframe{
         margin: 0 0 0 10px ;
     }
     
-    
 
+    
 }
