--- a/CONTACT/contact.css
+++ b/CONTACT/contact.css
@@ -1,3 +1,11 @@
+:root{
+    --textColor: #fff;
+    --principalGreen: #007335;
+    font-family: 'Ysabeau Infant', sans-serif;
+
+}
+
+
 body{
     background-color: #fff;
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23011604' fill-opacity='1' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
@@ -214,7 +222,7 @@ header {
 .wellTitle{
     grid-column: 2/3;
     display: grid;
-    align-items: start;
+    align-items: center;
     justify-items: start;
     height: 100%;
     font-size: 24px;
@@ -273,6 +281,80 @@ header {
 .directions>div>p{
     margin: 15px 0 15px 10px ;
 }
+
+.formContainer{
+
+    grid-template-columns: repeat(2,1fr);
+    position: absolute;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    /* align-items: center; */
+    /* text-align: center; */
+    grid-gap: 25px;
+    width: 100%;
+}
+    
+.presentationContainer{
+    height: 800px;
+}
+
+
+.formContleftCont{
+    grid-column: 1/2;
+    display: grid;
+    grid-template-rows: fit-content  repeat(4,1fr);
+    grid-template-columns: 1fr;
+    width: 100%;
+    justify-items: end;
+    column-gap: 30px;
+    height: fit-content;
+    width: fit-content;
+}   
+
+
+
+.formContleftCont>div{
+    width: 300px;
+    display: flex;
+    justify-content: start;
+    height: fit-content;
+}
+
+.advContTxt{
+    margin: 0 0 0 15px ;
+
+}
+
+.advRghtTitle>h2{
+    margin: 0
+}
+
+.lstContTitleCont title{
+    grid-row: 1/2 ;
+}
+
+.fromContLefTitle{
+    width: 300px;
+    justify-content: start;
+    height: fit-content;
+    font-size: 60px;
+}
+
+.rightCont{
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(7,1fr) ;
+    
+    
+}
+
+.advImgCont>img{
+    height: 50px;
+    width: 50px;
+}
+
 
 
 
